--- a/my-redux-1/package.json
+++ b/my-redux-1/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "myapp2",
+  "name": "my-redux-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^1.2.1"
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
